13) kernel: configs: disable ralink QoS netfiler tables rearrange (break captive portals work).<br>
14) kernel: configs: enable IDS for all devices.<br>
15) kernel: configs: switch MT7620 to 76x2 driver for all devices.<br>
16) kernel: ralink_ppe: fix reset pre-bind register on MT7621/MT7623 with pre-bind enabled.<br>
17) kernel: ralink_wifi: 76x2: do not alloc skb buffers for unsupported second RX ring on MT7620 (save more RAM).<br>
18) kernel: ralink_wifi: 76x2: improve kick STA by low RSSI.<br>
19) kernel: ralink_wifi: 7620: fix HTMIX mode work if MBSSID enabled.<br>
20) kernel: ralink_wifi: xxxx: backport some actual for all fixes from v4 driver.<br>
21) kernel: ralink_wifi: xxxx: fix modulation down to CCK in MBSSID mode regression.<br>
22) kernel: usb: usbnet: Fix a race between usbnet_stop() and the BH.<br>
23) kernel: usb: net: qmi_wwan: Sierra Wireless MC73xx -> Sierra Wireless MC7304/MC7354.<br>
24) kernel: usb: qcserial: add HP lt4111 LTE/EV-DO/HSPA+ Gobi 4G Module.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~98%).<br>
2) need add in UI advanced EntryLifeCheck variable (how pkts TX fail before connection drop, default 512).<br>
3) need add nodogsplash config in webui->hotspot (select chillispot or nodogsplash mode).<br>
4) need review, experiments with new roaming code in MT76x2 driver and implement to WebUI.<br>
5) need add multiif support in iappd daemon.<br>
6) need add subchannel select for 5GHz module.<br>
7) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
8) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
9) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
10) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
11) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
<br>
<br>
<br>