@@ -1301,6 +1301,7 @@
 22) kernel: usb: usbnet: Fix a race between usbnet_stop() and the BH.<br>
 23) kernel: usb: net: qmi_wwan: Sierra Wireless MC73xx -> Sierra Wireless MC7304/MC7354.<br>
 24) kernel: usb: qcserial: add HP lt4111 LTE/EV-DO/HSPA+ Gobi 4G Module.<br>
+25) kernel: net: ipv6: ip6_fragment: fix headroom tests and skb leak.<br>
 <br>
 <br>
 <b>TODO:</b><br>
